--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    
+    background-color: #f8fafc;
 }
 
 /* HEADER */
@@ -16,7 +16,7 @@ header {
 /* NAV */ 
 
 aside {
-    left: auto;
+    
 }
 
 nav {
@@ -25,6 +25,7 @@ nav {
     linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
     width: 160px;
     position: sticky;
+    position: absolute;
 }
 
 nav ul {
@@ -44,3 +45,22 @@ nav li a {
 nav li a:hover {
     color: #fb923c;
 }
+
+/* FOOTER */
+
+footer {
+    background: linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
+    text-align: center;
+    color: #f97316;
+    padding: 30px;
+}
+
+
+/* CONTAINER */
+
+.container {
+    padding: 20px 250px;
+}
+
+
+/* INDEX */
