--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,32 @@
 body {
     margin: 0;
     background-color: #f8fafc;
+    line-height: 1.6;
+    min-width: 1024px;
 }
 
 /* HEADER */
 
 header {
+    margin: 0 auto;
     text-align: center;
     background: linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
     padding: 37px;
     color: #f97316;
+    
 }
 
 
 /* NAV */ 
 
-aside {
-    
-}
-
 nav {
     background: radial-gradient(circle at 20% 50%, rgba(6, 182, 212, 0.15) 0%, transparent 50%),
     radial-gradient(circle at 80% 80%,rgba(20, 184, 166, 0.15) 0%,transparent 50%),
     linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
-    width: 160px;
-    position: sticky;
-    position: absolute;
+    padding: 20px;
+    position: fixed;
+    width: 200px;
+    height: 300px;
 }
 
 nav ul {
@@ -40,6 +41,8 @@ nav li a {
     color: white;
     text-decoration: none;
     font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 0.8px
 }
 
 nav li a:hover {
@@ -53,14 +56,45 @@ footer {
     text-align: center;
     color: #f97316;
     padding: 30px;
-}
+    font-size: 18px;
+}  
 
 
 /* CONTAINER */
 
 .container {
     padding: 20px 250px;
+    margin-left: 100px;
 }
 
 
 /* INDEX */
+
+.index-blocks {
+    
+}
+
+.index-block {
+    background: black;
+    padding: 18px;
+    height: 200px;
+    width: 200px;
+    border-radius: 20px;
+    color: white;
+    text-align: center;
+    margin: 20px;
+    
+    
+}
+
+
+
+.index-blocks a {
+    color: white;
+    text-decoration: none;
+}
+
+
+.index-block p {
+    opacity: 0.8;
+}
