--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,6 @@ footer {
     color: #f97316;
     padding: 30px;
     font-size: 18px;
-    position: fixed;
     bottom: 0;
     width: 100%;
 }  
@@ -81,6 +80,12 @@ footer {
     padding: 60px 500px;
 }
 
+.container-subtitle {
+    margin: 0 auto;
+    height: 3px;
+    width: 70px;
+    background-color: #06b6d4;;
+}
 
 /* INDEX */
 
@@ -98,13 +103,14 @@ footer {
     text-align: center;
     position: absolute;
     box-shadow: 0 10px 20px rgba(15, 23, 42, 1);
+    
 }
 
 .box1:hover,
 .box2:hover,
 .box3:hover,
 .box4:hover {
-    box-shadow: 10px 10px 20px rgba(15, 23, 42, 1);
+    
 }
 
 .box1 a,
@@ -164,6 +170,7 @@ footer {
     linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
     border-radius: 20px;
     color: white;
+    box-shadow: 0 10px 20px rgba(15, 23, 42, 1)
 }
 
 .parcours h2 {
