--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,38 @@
+@font-face {
+    font-family: 'Sora';
+    src: url('fonts/sora-regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Inter';
+    src: url('fonts/inter_18pt-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
+@font-face {
+    font-family: 'Inter';
+    src: url('fonts/inter_18pt-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+
+
 body {
     margin: 0;
     background-color: #f8fafc;
     line-height: 1.6;
     min-width: 1024px;
+    font-family: 'inter', sans-serif;
 }
+
+
+
 
 /* HEADER */
 
@@ -13,10 +42,13 @@ header {
     background: linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
     padding: 37px;
     color: #f97316;
+    width: 100%;
     }
 
 header h1 {
     text-shadow: 0 4px 16px rgba(251, 146, 60, 0.5);
+    font-family: 'Sora', sans-serif;
+    letter-spacing: 1px;
 }
 
 /* NAV */ 
@@ -44,7 +76,8 @@ nav li a {
     text-decoration: none;
     font-size: 18px;
     font-weight: bold;
-    letter-spacing: 0.8px
+    letter-spacing: 2px
+    
 }
 
 nav li a:hover {
@@ -60,7 +93,7 @@ footer {
     padding: 30px;
     font-size: 18px;
     bottom: 0;
-    width: 100%;
+    
 }  
 
 .footer-index {
@@ -69,7 +102,7 @@ footer {
     color: #f97316;
     padding: 30px;
     font-size: 18px;
-    margin-top: 450px;
+    margin-top: 500px;                                             
     width: 100%;
     
 } 
@@ -103,7 +136,6 @@ footer {
     text-align: center;
     position: absolute;
     box-shadow: 0 10px 20px rgba(15, 23, 42, 1);
-    
 }
 
 .box1:hover,
@@ -119,7 +151,6 @@ footer {
 .box4 a {
     color: white;
     text-decoration: none;
-    
 }
 
 .box1 p,
@@ -134,11 +165,11 @@ footer {
 }
 
 .box3 {
-    bottom: 80px;
+    bottom: 60px;
 }
 .box4 {
     left: 1100px;
-    bottom: 80px;
+    bottom: 60px;
 }
 
 .box1 h1,
@@ -164,18 +195,19 @@ footer {
     font-size: large;
     line-height: 1.8;
     padding: 50px;
-    font-weight: 500;
+    font-weight: 540;
     background: radial-gradient(circle at 20% 50%, rgba(6, 182, 212, 0.15) 0%, transparent 50%),
     radial-gradient(circle at 80% 80%,rgba(20, 184, 166, 0.15) 0%,transparent 50%),
     linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
     border-radius: 20px;
     color: white;
-    box-shadow: 0 10px 20px rgba(15, 23, 42, 1)
+    box-shadow: 0 10px 20px rgba(15, 23, 42, 1);
 }
 
 .parcours h2 {
     color: #f97316;
     text-shadow: 0 4px 16px rgba(251, 146, 60, 0.5);
+    font-family: 'Sora', sans-serif;
 }
 
 .parcours h3 {
@@ -184,4 +216,28 @@ footer {
 
 /* CONCLUSION */
 
+.conclusion {
+    background-color: #ffffff;
+    font-size: large;
+    line-height: 1.8;
+    font-weight: 250;
+    padding: 50px;
+    box-shadow: 0 4px 20px rgba(15, 23, 42, 0.8);
+    font-weight: 540;
+    border-radius: 20px;
+    border-top: 3px solid #06b6d4;
+    border-bottom: 3px solid #06b6d4;
+    color: #1e3a5f;
+}
+
+.conclusion h2,
+.conclusion h3 {
+    text-align: center;
+}
+
+
+
+.conclusion h3 {
+    color: #64748b;;
+}
 
