--- a/css/style.css
+++ b/css/style.css
@@ -307,3 +307,30 @@ footer {
     color: #64748b;;
 }
 
+
+.conclusion-max {
+    margin-top: 45px;
+    background-color: beige;
+    font-size: large;
+    line-height: 1.8;
+    padding: 50px;
+    font-weight: 540;
+    background: radial-gradient(circle at 20% 50%, rgba(6, 182, 212, 0.15) 0%, transparent 50%),
+    radial-gradient(circle at 80% 80%,rgba(20, 184, 166, 0.15) 0%,transparent 50%),
+    linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
+    border-radius: 20px;
+    color: white;
+    box-shadow: 0 10px 20px rgba(15, 23, 42, 1);
+}
+
+.conclusion-max h2 {
+    text-align: center;
+    color: #f97316;
+    text-shadow: 0 4px 16px rgba(251, 146, 60, 0.5);
+    font-family: 'Sora', sans-serif;
+}
+
+.conclusion-max  h3 {
+    text-align: center;
+    color: #06b6d4;
+}
