--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body {
     line-height: 1.6;
     min-width: 1024px;
     font-family: 'inter', sans-serif;
+    color: #64748b;
 }
 
 .titre {
@@ -122,6 +123,11 @@ footer {
     width: 70px;
     background-color: #06b6d4;
     margin-bottom: 40px;
+}
+
+.container p {
+    font-size: 16px;
+    font-weight: 600;
 }
 
 /* INDEX */
@@ -232,29 +238,52 @@ footer {
     margin-top: 70px;
     font-size: large;
     line-height: 1.8;
+    
+    }
+
+.qa-a {
+    height: 350px;
+    width: 400px;
+    padding-bottom: 55px;
+    position: absolute;
 }
+
+.qa-b {
+    height: 350px;
+    width: 400px;
+    padding-bottom: 55px;
+    position: relative;
+    left: 500px;
+}
+
+
 
 .question {
     background: linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
     border-radius: 20px 20px 0 0;
-    padding: 20px;
+    padding: 15px;
     color: white;
+    
 }
 
 .answer {
     background: white;
     border-radius: 0 0 20px 20px;
     box-shadow: 0 4px 20px rgba(15, 23, 42, 0.8);
-    padding: 20px;
+    padding: 15px;
 }
 
 
 .number {
     background: linear-gradient(135deg, #fb923c 0%, #f97316 100%);
     border-radius: 50%;
-    
-    
     box-shadow: 0 4px 12px rgba(251, 146, 60, 0.4);
+    display: inline-block;
+    text-align: center;
+    height: 10px;
+    width: 10px;
+    line-height: 0.5; 
+    padding: 15px;
 }
 
 /* PARCOURS */
