--- a/css/style.css
+++ b/css/style.css
@@ -326,7 +326,7 @@ footer {
     border-radius: 20px;
     border-top: 3px solid #06b6d4;
     border-bottom: 3px solid #06b6d4;
-    color: #1e3a5f;
+    color: #64748b;
 }
 
 .conclusion h2,
@@ -335,9 +335,12 @@ footer {
 }
 
 .conclusion h3 {
-    color: #64748b;;
+    color: #1e3a5f;
 }
 
+.conclusion p strong {
+    color: #0f172a;
+}
 
 .conclusion-max {
     margin-top: 45px;
