--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,7 @@ footer {
 }
 
 .entreprise-id {
-    padding: 50px;
+    padding: 30px;
 }
 
 
@@ -261,7 +261,7 @@ footer {
     width: 200px;
     padding: 8px;
     position: relative;
-    left: 450px;
+    left: 500px;
     transition: all 0.3s;
 }
 
@@ -274,6 +274,10 @@ footer {
     border: 3px solid #f97316;
     transform: translateY(-20px);
     box-shadow:1px 12px 20px 7px rgba(15, 23, 42, 0.8);
+}
+
+.conclusion-max strong {
+    color: #06b6d4;;
 }
 
 /* INTERVIEW */
