--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ footer {
 .entreprise-box:hover,
 .entreprise-box-b:hover {
     border: 3px solid #f97316;
-    transform: translateY(-20px);
+    transform: translateY(-25px);
     box-shadow:1px 12px 20px 7px rgba(15, 23, 42, 0.8);
 }
 
@@ -286,7 +286,7 @@ footer {
     background-color: #ffffff;
     font-size: large;
     line-height: 1.8;
-    font-weight: 250;
+    font-weight: 550;
     padding: 45px;
     box-shadow: 0 4px 20px rgba(15, 23, 42, 0.8);
     font-size: large;
@@ -296,7 +296,7 @@ footer {
 }
 
 .card-maxime h2 {
-    color: ;
+    
     text-align: center;
     color: #1e3a5f;
 }
@@ -306,7 +306,7 @@ footer {
 }
 
 .card-maxime p {
-    font-weight: 540;
+    font-weight: 550;
     font-size: large;
 }
 
@@ -346,6 +346,9 @@ footer {
     width: 400px;
     font-size: large;
     line-height: 1.8;
+    position: relative;
+    top: 150px;
+    left: 250px;
 }
 
 
@@ -354,7 +357,7 @@ footer {
     border-radius: 20px 20px 0 0;
     padding: 15px;
     color: white;
-    
+    font-weight: 475;
 }
 
 .answer {
@@ -362,6 +365,7 @@ footer {
     border-radius: 0 0 20px 20px;
     box-shadow: 0 4px 20px rgba(15, 23, 42, 0.8);
     padding: 15px;
+    font-weight: 550;
 }
 
 
