--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,11 @@ body {
     color: #0f172a;
 }
 
-
 /* HEADER */
 
 header {
     background-image: url(/images/pexels-earano-1350197.avif);
-    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center;
     padding: 37px;
     color: #f97316;
@@ -59,6 +58,7 @@ header h1 {
 }
 
 /* NAV */ 
+
 
 nav {
     background: radial-gradient(circle at 20% 50%, rgba(6, 182, 212, 0.15) 0%, transparent 50%),
@@ -107,15 +107,17 @@ footer {
     text-align: center;
     color: #f97316;
     padding: 25px;
+    padding-right: 20px;
     font-size: 18px;
     bottom: 0;
+    width: 101%;
 }  
 
 .footer-index {
     background: linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
     text-align: center;
     color: #f97316;
-    padding: 30px;
+    padding: 25px;
     font-size: 18px;
     margin-top: 500px;                                             
     width: 100%;
@@ -194,20 +196,19 @@ footer img {
     text-decoration: none;
 }
 
-.box1 p,
-.box2 p,
-.box3 p,
-.box4 p {
-    opacity: 0.8;
-}
-
 .box2 {
     left: 1100px;
 }
 
 .box3 {
     bottom: 60px;
+
 }
+
+.box3 img {
+    height: 80px;
+}
+
 .box4 {
     left: 1100px;
     bottom: 60px;
@@ -224,6 +225,10 @@ footer img {
     margin-bottom: 200px;
 }
 
+.box2 {
+    position: absolute;
+}
+
 .box2 img {
     height: 115px;
     border-radius: 50%;
@@ -232,8 +237,29 @@ footer img {
     border: 2px solid #06b6d4;
 }
 
-.box2 {
+.box3 {
     position: absolute;
+}
+
+.box3 img {
+    height: 112px;
+    width: 112px;
+    border-radius: 50%;
+    position: relative;
+    bottom: 18px;
+}
+
+.box4 {
+    position: absolute;
+}
+
+.box4 img {
+    height: 115px;
+    width: 120px;
+    border-radius: 50%;
+    position: relative;
+    bottom: 20px;
+    border: 2px solid #06b6d4;
 }
 
 /* RAPPORT */
@@ -400,8 +426,7 @@ footer img {
     margin-top: 70px;
     font-size: large;
     line-height: 1.8;
-    
-    }
+}
 
 .qa-a {
     height: 350px;
@@ -539,4 +564,9 @@ footer img {
 .conclusion-max  h3 {
     text-align: center;
     color: #06b6d4;
+}
+
+.conclusion-max strong {
+    color: #06b6d4;
+    font-style: italic;
 }
