--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   background-color: #f8fafc;
   line-height: 1.6;
-  min-width: 1024px;
+  max-width: 1024px;
   font-family: "inter", sans-serif;
   color: #64748b;
 }
@@ -68,24 +68,25 @@ nav {
       transparent 50%
     ),
     linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
-  padding: 20px;
+  padding: 15px;
   position: fixed;
-  width: 200px;
-  height: 300px;
+  width: 140px;
+  height: 280px;
   box-shadow: 0 5px 20px rgba(15, 23, 42, 1);
 }
 
 nav ul {
   list-style: none;
+  padding-left: 5px;
 }
 
 nav ul li {
-  padding: 10px;
+  padding: 5px;
 }
 
 nav ul li img {
-  height: 40px;
-  margin-left: 25px;
+  height: 50px;
+  margin-left: 35px;
 }
 
 nav li a {
@@ -148,7 +149,7 @@ footer img {
 /* CONTAINER */
 
 .container {
-  padding: 60px 500px;
+  padding: 40px 200px;
 }
 
 .container-subtitle {
@@ -295,12 +296,12 @@ footer img {
 
 .rapport-intro img {
   position: relative;
-  left: 275px;
+  left: 125px;
   top: 10px;
 }
 
 .entreprise-id {
-  padding: 30px;
+  padding-bottom: 50px;
 }
 
 .entreprise-box {
@@ -318,7 +319,6 @@ footer img {
   width: 200px;
   padding: 8px;
   position: absolute;
-  margin-left: 70px;
   transition: all 0.3s;
 }
 
@@ -338,7 +338,7 @@ footer img {
   width: 200px;
   padding: 8px;
   position: relative;
-  left: 500px;
+  left: 400px;
   transition: all 0.3s;
 }
 
@@ -362,8 +362,8 @@ footer img {
   background-color: beige;
   font-size: large;
   line-height: 1.8;
-  padding: 50px;
-  font-weight: 540;
+  padding: 40px;
+  font-weight: 450;
   background:
     radial-gradient(
       circle at 20% 50%,
@@ -395,8 +395,7 @@ footer img {
 
 .conclusion-entreprise img {
   position: relative;
-  bottom: 1px;
-  left: 370px;
+  left: 235px;
 }
 
 /* INTERVIEW */
@@ -433,47 +432,47 @@ footer img {
 .card-maxime img {
   height: 200px;
   border-radius: 50%;
-  position: absolute;
-  top: 420px;
-  left: 600px;
+  position: relative;
+  left: 150px;
   border: 3px solid #06b6d4;
 }
 
 .qa {
-  margin-top: 70px;
+  margin-top: 40px;
   font-size: large;
-  line-height: 1.8;
+  line-height: 1.5;
 }
 
 .qa-a {
   height: 350px;
-  width: 400px;
+  width: 300px;
   padding-bottom: 55px;
   position: absolute;
 }
 
 .qa-b {
   height: 350px;
-  width: 400px;
+  width: 300px;
   padding-bottom: 55px;
   position: relative;
-  left: 500px;
+  left: 350px;
 }
 
 .qa-final {
   height: 350px;
   width: 400px;
   font-size: large;
-  line-height: 1.8;
+  line-height: 1.5;
   position: relative;
   top: 150px;
-  left: 250px;
+  left: 110px;
+  margin-top: 20px;
 }
 
 .question {
   background: linear-gradient(135deg, #0f172a 0%, #1e3a5f 50%, #334155 100%);
   border-radius: 20px 20px 0 0;
-  padding: 15px;
+  padding: 10px;
   color: white;
   font-weight: 550;
 }
@@ -482,8 +481,9 @@ footer img {
   background: white;
   border-radius: 0 0 20px 20px;
   box-shadow: 0 4px 20px rgba(15, 23, 42, 0.8);
-  padding: 15px;
+  padding: 10px;
   font-weight: 550;
+  border-left: 1px solid #fb923c;
 }
 
 .number {
@@ -492,9 +492,9 @@ footer img {
   box-shadow: 0 4px 12px rgba(251, 146, 60, 0.4);
   display: inline-block;
   text-align: center;
-  height: 10px;
-  width: 10px;
-  line-height: 0.5;
+  height: 8px;
+  width: 8px;
+  line-height: 8px;
   padding: 15px;
   margin-right: 5px;
   font-weight: 550;
